# Der-Zug

./: .design.py.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  design.py  execute.py  makefile  prepare.sh  run.sh  startGame.sh  test.tex  textadventure.sh
src/: .CInventory.hpp.swp  .CPlayer.hpp.swp  .Character.cpp.swp  .Context.cpp.swp  .Dialog.cpp.swp  .EnhancedContext.cpp.swp  .Fight.cpp.swp  .FightContext.cpp.swp  .Inventory.cpp.swp  .Item.cpp.swp  .Person.cpp.swp  .Player.cpp.swp  .Quest.cpp.swp  .Room.cpp.swp  .StandardContext.cpp.swp  .Text.cpp.swp  .World.cpp.swp  CCharacter.hpp  CChatContext.hpp  CChoiceContext.hpp  CContext.hpp  CDetail.hpp  CDialog.hpp  CDialogContext.hpp  CEnhancedContext.hpp  CExit.hpp  CFight.hpp  CFightContext.hpp  CGame.hpp  CGameContext.hpp  CInventory.hpp  CItem.hpp  CListener.hpp  CMakeLists.txt  CMind.hpp  CObject.hpp  CParser.hpp  CPerson.hpp  CPlayer.hpp  CQuest.hpp  (+47 more)
src/data/default_jsons/: config.json  de_config.json  de_config_attributes.json  de_config_help.json  de_config_items.json  en_config.json  en_config_attributes.json  en_config_help.json  en_config_items.json  en_defaultDialog.json  players.json  test.json  test_room.json  test_room_fail.json
src/data/help/: .fight.txt.swp  standard.txt  trade.txt
src/data/templates/: attacks.json  characters.json  details.json  dialogs.json  items.json  players.json  quests.json  rooms.json  texts.json
src/data/users/fux/: user.json
src/data/users/nichtnils/: user.json
src/factory/: .current_world.json.swp  current_world.json
src/factory/characters/: monsters.yaml  trainstation.yaml  zug.yaml
src/factory/dialogs/: defaultDialog.yaml  drunkWomanDialog.yaml  konstantinDialog.yaml  parsenDialog.yaml  pissingManDialog.yaml  strangeGuysDialog.yaml  strangeGuysDialog2.yaml  ticketVerkäuferDialog.yaml
src/factory/help/: chat.txt  read.txt  standard.txt  trade.txt
src/factory/items/: consumeable.yaml  equipable.yaml  others.yaml
src/factory/jsons/characters/: monsters.json  trainstation.json  zug.json
src/factory/jsons/defaultDescriptions/: zombies.json
src/factory/jsons/dialogs/: defaultDialog.json  drunkWomanDialog.json  konstantinDialog.json  parsenDialog.json  pissingManDialog.json  strangeGuysDialog.json  strangeGuysDialog2.json  ticketVerkäuferDialog.json
src/factory/jsons/items/: consumeable.json  equipable.json  others.json
src/factory/jsons/players/: players.json
src/factory/jsons/quests/: tutorial.json
src/factory/jsons/rooms/: hospital.json  trainstation.json  traistation.json  zug.json
src/factory/players/: players.yaml
src/factory/quests/: tutorial.yaml
src/factory/rooms/: .trainstation.yaml.swp  hospital.yaml  trainstation.yaml  traistation.yaml  zug.yaml
src/factory/world1/: .config.json.swp  config.json
src/factory/world1/attacks/: normal.yaml
src/factory/world1/characters/: monsters.yaml  trainstation.yaml
src/factory/world1/defaultDescriptions/: zombies.yaml
src/factory/world1/defaultDialogs/: zombies.yaml
src/factory/world1/details/: details.yaml
src/factory/world1/dialogs/: cho_chikun.yaml  defaultDialog.yaml  drunkWomanDialog.yaml  konstantinDialog.yaml  parsenDialog.yaml  pissingManDialog.yaml  strangeGuysDialog.yaml  strangeGuysDialog2.yaml  ticketVerkäuferDialog.yaml
src/factory/world1/items/: consumeable.yaml  equipable.yaml  others.yaml  quest.yaml
src/factory/world1/players/: players.yaml
src/factory/world1/quests/: .tutorial.yaml.swp  leave.yaml  tutorial.yaml
src/factory/world1/rooms/: hospital.yaml  trainstation.yaml  zug.yaml
src/factory/world2/: config.json
src/factory/world2/characters/: einleitung.yaml
src/factory/world2/dialogs/: defaultDialog.yaml
src/factory/world2/rooms/: einleitung.yaml
src/game_builder/: design.py
src/gui/: CMakeLists.txt  README.md  conanfile.txt
src/gui/.clangd/index/: cleanup_dtor.h.84365D50F6115D7D.idx  func.cc.0DD17F95F745E711.idx  func.h.BAE4F3FCFCA5FC12.idx  inja.hpp.29D04FCE6E9A4A0D.idx  main.cc.3EF94F045885EBD7.idx  server_frame.cc.61CDDB4BCAEEB42F.idx  server_frame.h.54DBFC7CC95428BA.idx  test_func.cc.8A62FC5DA5C33368.idx  test_server.cc.0F816C4B69EF9AB9.idx  test_user.cc.1DB02B8D73F7ED2B.idx  test_user_manager.cc.FF2567B54A734DDC.idx  user.cc.53AB14C8BC2E0F9B.idx  user.h.5AE4B557617ABF02.idx  user_manager.cc.9D04543082D35EF2.idx  user_manager.h.44666C42724C26B5.idx
src/gui/docs/: doxygen_config
src/gui/docs/html/: annotated.html  area_8h_source.html  category_8h_source.html  classArea-members.html  classArea.html  classCategory-members.html  classCategory.html  classPage-members.html  classPage.html  classServerFrame-members.html  classServerFrame.html  classUser-members.html  classUser.html  classUserManager-members.html  classUserManager.html  classWorld-members.html  classWorld.html  classWorlds-members.html  classWorlds.html  classes.html  classinja_1_1AstNode-members.html  classinja_1_1AstNode.html  classinja_1_1BlockNode-members.html  classinja_1_1BlockNode.html  (+77 more)
src/gui/old/: config_attributes.html
src/gui/src/: main.cc  test_main.cc  test_user.cc
src/gui/webserver/: commands.json  event_arguments.json  handler_arguments.json  handlers.json  index.html
src/old/: CChoiceContext.hpp  CContext.hpp  CGameContext.hpp  CTradeContext.hpp  ChatContext.cpp  Context.cpp  TradeContext.cpp  WorldContext.cpp
src/textadventure/: .env.example  CMakeLists.txt  README.md  conanfile.txt  index.html  index_old.html  main.cc  makefile
src/textadventure/actions/: dialog.cc  dialog.h
src/textadventure/concepts/: inventory.cc  inventory.h  quest.cc  quest.h  text.cc  text.h
src/textadventure/eventmanager/: context.cc  context.h  parser.h  sorted_context.cc  sorted_context.h
src/textadventure/game/: game.cc  game.h  world.cc  world.h
src/textadventure/logs/: logfile.txt
src/textadventure/objects/: detail.cc  exit.cc  exit.h  person.cc  player.cc  player.h  room.cc  room.h
src/textadventure/src/: main.cc
src/textadventure/tools/: a.out  func.cc  func.h  fuzzy.cc  fuzzy.h  gramma.h  logic_parser.cc  logic_parser.h  main.cpp
(+519 files in other folders)
